# lectornaut

./: .firebaserc  .gitignore  .prettierrc  auto-imports.d.ts  components.d.ts  components.json  eslint.config.mjs  firebase.json  firestore.rules  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  storage.rules  stylelint.config.mjs  tailwind.config.ts  tsconfig.json  typed-router.d.ts  vite.config.ts
.github/workflows/: app-deploy-preview.yml  app-deploy-release.yml  web-deploy-preview.yml  web-deploy-release.yml
functions/: package.json  pnpm-lock.yaml
functions/src/: index.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: globals.css  index.css  main.scss  theme.scss
src/assets/styles/: globals.css
src/components/: AppSidebar.vue  NavMain.vue  NavProjects.vue  NavUser.vue  TeamSwitcher.vue
src/components/app/: Actions.vue  ColorMode.vue  CommandK.vue  Commands.vue  DateRangePicker.vue  DateViewPicker.vue  Goals.vue  Insights.vue  LanguageSwitcher.vue  LeftSidebar.vue  LoanTable.vue  Navigation.vue  NewTransaction.vue  Notifications.vue  Overview.vue  Recent.vue  RightSidebar.vue  Settings.vue  Shortcuts.vue  Sidebar.vue  Support.vue  TeamSwitcher.vue  Toolbar.vue
src/components/editor/: Editor.vue
src/components/enter/: EnterContent.vue  EnterEmailSent.vue  EnterFooter.vue  EnterTrigger.vue  HeroText.vue
src/components/exit/: ExitTrigger.vue
src/components/flow/: FlowActivity.vue  FlowApp.vue  FlowDetails.vue  FlowEdge.vue  FlowNode.vue  FlowProgress.vue  FlowSettings.vue  FlowSidebar.vue  useDnD.ts
src/components/hyper/: HyperApp.vue
src/components/landing/: CTA.vue  Faq.vue  Features.vue  Footer.vue  FooterText.vue  Header.vue  HeroText.vue  Overview.vue  QRCode.vue  Users.vue  WallOfLove.vue
src/components/smart/: AnimatedCounter.vue  OverlayScrollbarsWrapper.vue  RadiantText.vue  Tree.vue
src/components/table/: DataTable.vue  DataTableColumnHeader.vue  DataTableFacetedFilter.vue  DataTableFilterOptions.vue  DataTableGroupOptions.vue  DataTablePagination.vue  DataTableRowActions.vue  DataTableSearchOptions.vue  DataTableSortOptions.vue  DataTableToolbar.vue  DataTableViewOptions.vue  columns.ts
src/components/tasks/: DataTable.vue  DataTableColumnHeader.vue  (+6 more)
src/composables/: useDnD.ts  useFirestore.ts
src/data/: changelog.ts  chart.ts  constants.ts  data.ts  nodes.ts
src/helpers/: breadcrumber.ts  defaults.ts  shortcuts.ts  utilities.ts
src/layouts/: agents.vue  app.vue  default.vue  empty.vue  home.vue  landing.vue  workflows.vue
src/lib/: utils.ts
src/locales/: ja.json
src/modules/: auth.ts  firebase.ts  hotkeys.ts  i18n.ts  pwa.ts  router.ts  theme.ts  updater.ts
src/pages/: [...path].vue  accounts.vue  agents.vue  balances.vue  changelog.vue  create.vue  drafts.vue  enter.vue  exit.vue  explore.vue  home.vue  index.vue  loans.vue  new.vue  pricing.vue  runs.vue  savings.vue  tasks.vue  teams.vue  test.vue  transactions.vue  welcome.vue  workflows.vue  write.vue
src/queries/: setDefaultUserData.ts  updateUserData.ts
src/stores/: todoStore.ts
src/styles/: globals.css  index.css  theme.css  theme.scss
src/types/: index.ts
(+339 files in other folders)
