[package]
name = "template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "template_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# https://crates.io/crates/tauri/versions
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
# https://crates.io/crates/serde/versions
serde = { version = "1", features = ["derive"] }
# https://crates.io/crates/serde_json/versions
serde_json = "1"

# https://crates.io/crates/tauri-plugin-shell/versions
tauri-plugin-shell = "2"
# https://crates.io/crates/tauri-plugin-theme/versions
tauri-plugin-theme = "2"
# https://crates.io/crates/tauri-plugin-deep-link/versions
tauri-plugin-deep-link = "2"

# https://crates.io/crates/window-vibrancy/versions
window-vibrancy = "0.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-window-state = "2"
